# FakeToothRoot

./: .gitignore  CMakeLists.txt  FakeToothRoot.cpp  FakeToothRoot.h  Polyhedron.cpp  Polyhedron.h  main.cpp
cmake_wasm/: CMakeLists.txt
